syntax = "proto3";

package consensus;

message LeaderAssertRequest {}
message LeaderAssertResponse {}

message RequestVoteRequest {}
message RequestVoteResponse {}

// raft
service ConsensusService {
  rpc LeaderAssert(LeaderAssertRequest) returns (LeaderAssertResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

// https://protobuf.dev/programming-guides/proto3/
